--- a/home/home.component.scss
+++ b/home/home.component.scss
@@ -56,8 +56,8 @@
     overflow: hidden;
   }
   
-  /* If you want to allow clicks on specific areas while the cart is open */
+
   .cart-sidebar {
-    pointer-events: auto; /* Enable pointer events for the cart sidebar */
+    pointer-events: auto;
   }
   
